--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1"
@@ -18,5 +20,10 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "vite": "^4.1.0"
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "API_URL_LOCAL"
+    ]
   }
 }
