--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-ConnectionString = "mongodb+srv://manavjain083:fnrrHOr60qMhfcUT@cluster0.b2jgheg.mongodb.net/test"
+ConnectionString = "mongodb+srv://manavjain083:fnrrHOr60qMhfcUT@cluster0.b2jgheg.mongodb.net/clone"
 Token_key = 2345
