--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,18 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^4.1.0"
   },
   "react-dotenv": {
     "whitelist": [
       "API_URL_LOCAL"
     ]
+  },
+  "plugins": [
+    "react-refresh"
+  ],
+  "rules": {
+    "react-refresh/only-export-components": "warn"
   }
 }
